import {
  Entity,
  PrimaryColumn,
  Column,
  OneToMany,
  CreateDateColumn,
  UpdateDateColumn,
} from 'typeorm';
import { Role, Status } from './enums';
import { House } from './house.entity';
import { HouseUser } from './house-user.entity';
import { ManualValidationApproval } from './manual-validation-approval.entity';

@Entity('users')
export class User {
  @PrimaryColumn('varchar', { length: 128 })
  id: string;

  @Column({
    type: 'enum',
    enum: Role,
    enumName: 'role_t',
    default: Role.TENANT,
  })
  role: Role;

  @Column({
    type: 'enum',
    enum: Status,
    enumName: 'status_t',
    default: Status.ACTIVE,
  })
  status: Status;

  @Column({ type: 'varchar', length: 255, nullable: true })
  name: string;

  @Column({ type: 'varchar', length: 255, nullable: true })
  email: string;

  @Column({ type: 'numeric', nullable: true })
  cel_phone: number;

  @Column({ type: 'text', nullable: true })
  avatar: string;

  @Column({ type: 'timestamptz', nullable: true })
  last_login: Date;

  @Column({ type: 'text', nullable: true })
  observations: string;

  @Column({ type: 'boolean', default: false })
  email_verified: boolean;

  @Column({ type: 'timestamptz', nullable: true })
  email_verified_at: Date;

  @CreateDateColumn()
  created_at: Date;

  @UpdateDateColumn()
  updated_at: Date;

  @OneToMany(() => House, (house) => house.user)
  houses: House[];

  @OneToMany(() => HouseUser, (houseUser) => houseUser.user)
  houseUsers: HouseUser[];

  @OneToMany(
    () => ManualValidationApproval,
    (approval) => approval.approvedByUser,
  )
  manualValidationApprovals: ManualValidationApproval[];
}
